# vitalsight

./: .dockerignore  .gitignore  CLAUDE.md  DEVPOST.md  Dockerfile  README.md  deploy.sh  fly-entrypoint.sh  fly.toml  package-lock.json  package.json
.claude/: settings.json
backend/: .env.example  Dockerfile  db.js  fly.toml  index.js  package-lock.json  package.json  vitalsight.sqlite-shm  vitalsight.sqlite-wal
backend/config/: security.js
backend/lib/: authSession.js
backend/middleware/: auth.js  rateLimit.js
backend/routes/: auth.js  forms.js  inbox.js  patients.js  presage.js  trials.js
backend/scripts/: dev.cjs  seed.cjs
backend/services/: email.js  presage.js  scheduler.js
frontend/: README.md  index.html  netlify.toml  package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Dashboard.jsx  DiscoveryTab.jsx  FormBuilder.jsx  FormFill.jsx  Inbox.jsx  InfoTip.jsx  JoinTrial.jsx  Landing.jsx  LocationAutocomplete.jsx  Login.jsx  Logo.jsx  NavBar.jsx  PatientConditionsField.jsx  PatientOnboarding.jsx  Profile.jsx  ProtectedRoute.jsx  Register.jsx  SessionRecoveryDialog.jsx  TagInput.jsx  Toast.jsx  TrialDetails.jsx  TrialManagement.jsx  patientProfileOptions.js
frontend/src/contexts/: AuthContext.jsx
frontend/src/lib/: api.js  trialCompensation.js
frontend/src/pages/: BusinessPlanPage.jsx  MonitorPage.jsx  (+2 more)
presage-bridge/: Dockerfile  build.sh  docker-run.sh  server.cjs
presage-bridge/native/: CMakeLists.txt
presage-bridge/native/cmake/: Findabsl.cmake
presage-bridge/native/src/: main.cc
